[package]
name = "jwks_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.21"
jsonwebtoken = "8" 
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1.17"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
actix-rt = "2"
actix-http-test = "3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
